--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
-[pytest]
-addopts = -vs -rf --html-report=./report --title=report-html
+; [pytest]
+; addopts = -vs -rf --html-report=./report --title=report-html
