--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- run unit test cases -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.12.4</version>
+    <configuration>
+        <environmentVariables>
+            <outputDirectory>${project.build.directory}</outputDirectory>
+        </environmentVariables>
+    </configuration>
+    <executions>
+        <execution>
+            <id>default-test</id>
+            <configuration>
+                <forkMode>once</forkMode>
+                <suiteXmlFiles>
+                    <suiteXmlFile>${basedir}/src/test/testngSuite1.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </execution>
+        <execution>
+            <id>special-test</id>
+            <phase>test</phase>
+            <goals>
+                <goal>test</goal>
+            </goals>
+            <configuration>
+                <forkMode>always</forkMode>
+                <suiteXmlFiles>
+                    <suiteXmlFile>${basedir}/src/test/testngSuite2.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+
+
+<!-- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.gov.dwp.dataworks.adg-tests</groupId>
@@ -11,4 +48,4 @@
             <version>2.10.9</version>
         </dependency>
     </dependencies>
-</project>
+</project> -->
