--- a/pom.xml
+++ b/pom.xml
@@ -1,107 +1,57 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
- 
-    <groupId>directional_changes</groupId>
-    <artifactId>dc</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
- 
-    <name>Directional Changes Forex Strategy</name>
-     
-    <developers>
-        <developer>
-            <id>bob m</id>
-            <name>Bob Matthews</name>
-            <email>rgmatthews@orcon.net.nz</email>
-            <properties>
-                <active>true</active>
-            </properties>
-        </developer>
-    </developers>
- 
-    <dependencies>     
-    <!-- https://mvnrepository.com/artifact/dsol/dsol-xml -->
-        <dependency>
-            <groupId>dsol</groupId>
-            <artifactId>dsol-xml</artifactId>
-            <version>1.6.9</version>
-        </dependency>
- 
-    <!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.moa/weka-package -->    
-        <dependency>
-            <groupId>nz.ac.waikato.cms.moa</groupId>
-            <artifactId>weka-package</artifactId>
-            <version>2020.12.0</version>
-        </dependency>
-     
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.6.1</version>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
-        </dependency>
-     
-        <dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jcommon</artifactId>
-            <version>1.0.23</version>
-        </dependency>
-    <!-- Thanks for using https://jar-download.com -->
- 
-        <dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jfreechart</artifactId>
-            <version>1.0.19</version>
-        </dependency>
-    <!-- Thanks for using https://jar-download.com -->
- 
-        <dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jfreesvg</artifactId>
-            <version>2.0</version>
-        </dependency>
-    <!-- Thanks for using https://jar-download.com -->
- 
-    <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.9.9</version>
-        </dependency>
- 
-        <dependency>
-            <groupId>com.googlecode.netlib-java</groupId>
-            <artifactId>netlib-java</artifactId>
-            <version>0.9.3</version>
-        </dependency>
-    <!-- Thanks for using https://jar-download.com -->
- 
-    <!-- https://mvnrepository.com/artifact/eu.verdelhan/ta4j -->
-        <dependency>
-            <groupId>eu.verdelhan</groupId>
-            <artifactId>ta4j</artifactId>
-            <version>0.4</version>
-        </dependency>
-    </dependencies>
- 
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.example.basicapp</groupId>
+  <artifactId>myapp</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.8.0</version>
-    <configuration>
-        <release>11</release>
-    </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-   
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>2.5.63</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>s3</artifactId>
+    </dependency>
+
+  </dependencies>
+
 </project>
