--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
-; [pytest]
-; addopts = -vs -rf --html-report=./report --title=report-html
+[pytest]
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore:function ham\(\) is deprecated:DeprecationWarning
